# PyFMlab_DyNaMo

./: .gitignore  README.md
PyFMGUI_DyNaMo/: README.md  example_hertz_results.csv  requirements.txt
PyFMGUI_DyNaMo/src/pyfmgui/: const.py  export.py  loadfiles.py  main_window.py
PyFMGUI_DyNaMo/src/pyfmgui/widgets/: dataviewer_widget.py  exportdialog.py  get_params.py  hertzfit_widget.py  microrheo_widget.py  piezochar_widget.py  thermaltune_widget.py  tingfit_widget.py  vdrag_widget.py
PyFMReader_DyNaMo/: README.md  requirements.txt  setup.cfg
PyFMReader_DyNaMo/examples/: BasicUsageExample.ipynb
PyFMReader_DyNaMo/src/pyfmreader/: constants.py  pyfmreader.py  uff.py
PyFMReader_DyNaMo/src/pyfmreader/ardf/: get_ardf_data.py  loadARDFcurve.py  loadARDFfile.py  loadARDFimg.py  loadibwcurve.py  loadibwfile.py  parseARDFheader.py  parseibwheader.py  read_ardf.py  utils_ardf.py
PyFMReader_DyNaMo/src/pyfmreader/ardf/test/: Image0010.ibw  Image0011.ibw  Image0012.ibw  Image0013.ibw  Image0016.ibw
PyFMReader_DyNaMo/src/pyfmreader/jpk/: loadjpkcurve.py  loadjpkimg.py  parsejpkheader.py
PyFMReader_DyNaMo/src/pyfmreader/nanosc/: loadnanosccurve.py  parsenanoscheader.py
PyFMReader_DyNaMo/src/pyfmreader/ps_nex/: __init__.py  loadpsnexcurve.py  loadpsnexfile.py  parsepsnexheader.py
PyFMReader_DyNaMo/src/pyfmreader/utils/: forcecurve.py  segment.py
PyFMRheo_DyNaMo/: README.md  setup.cfg
PyFMRheo_DyNaMo/src/pyfmrheo/models/: calibration.py  hertz.py  rheology.py  ting.py
PyFMRheo_DyNaMo/src/pyfmrheo/routines/: HertzFit.py  MicrorheologyFFT.py  MicrorheologySine.py  (+2 more)
