[metadata]
name = pyfmreader_dynamo
version = 0.1.3
author = Javier Lopez Alonso
author_email = jla.lopez.18@gmail.com
description = A python package to read Nanoscope and JPK AFM files.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/DyNaMo-INSERM/PyFMReader_DyNaMo
project_urls =
    Bug Tracker = https://github.com/jlopezalo/PyFMReader/issues
    repository =https://github.com/DyNaMo-INSERM/PyFMReader_DyNaMo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    scipy
    nptdms
    numpy
    pandas
    tifffile
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
